--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
+  pretty_dio_logger: ^1.2.0-beta-1
   cupertino_icons: ^1.0.2
   get_it: ^7.2.0
   provider: ^6.0.1
@@ -50,6 +50,8 @@ dependencies:
   flutter_typeahead: ^3.1.3
   marquee: ^2.2.1
   flutter_rating_bar: ^4.0.0
+  get: ^4.6.5
+  dropdown_search: ^2.0.1
 
 
 
